<resources>
    <string name="app_name">TrainingRetrofit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="button_create">Create User</string>
    <string name="button_update">Update User</string>
    <string name="button_delete">Delete User</string>
</resources>
