<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GhostWhite"
    tools:context=".activity_create_user.create_ui_activity.CreateUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@color/FerrariRed">

            <ImageView
                android:id="@+id/bt_back"
                android:layout_width="54dp"
                android:layout_height="28dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:onClick="bt_back"
                app:srcCompat="@drawable/abc_vector_test" />

            <TextView
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="0dp"
                android:text="Create User"
                android:textAlignment="center"
                android:textColor="@color/White"
                android:textSize="24dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:src="@drawable/user_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firtname_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:hint="@string/first_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastname_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:hint="@string/last_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birtDate_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBirtDate"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/birth_date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input_layout"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/password" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmpassword_text_input_layout"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etconfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_create"
                android:layout_marginTop="15dp"
                android:textColor="@color/White"
                android:textSize="18dp"
                android:textStyle="bold"
                android:background="@drawable/custom_button"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>